<resources>
    <string name="app_name">EEC Events</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_email_id">Enter your Email ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_user">New User? Create an Account</string>
    <string name="signup">Sign UP</string>
    <string name="or">OR</string>
    <string name="back">Back</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="automobile">AUTOMOBILE</string>
    <string name="civil">CIVIL</string>
    <string name="cse">CSE</string>
    <string name="it">IT</string>
    <string name="eee">EEE</string>
    <string name="ece">ECE</string>
    <string name="eie">EIE</string>
    <string name="mechanical">MECHANICAL</string>
    <string name="departments">DEPARTMENTS</string>
    <string name="easwari_engineering_college">EASWARI ENGINEERING COLLEGE</string>
    <string name="welcome">WELCOME!</string>
    <string name="all_events">All Events</string>
    <string name="symposiums">Symposiums</string>
    <string name="office_bearers">Office Bearers</string>
    <string name="annexure">Annexure</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="up_coming">UP COMING!</string>
    <string name="admin">Admin</string>
    <string name="department_name">DEPARTMENT NAME</string>
    <string name="share">SHARE</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="administrator_column">ADMINISTRATOR COLUMN</string>
    <string name="enter_the_name_of_the_event">Enter the Name of the Event</string>
    <string name="select_the_event_date">Select the Event Date</string>
    <string name="post_the_event">Post Event</string>
    <string name="event_name">EVENT NAME</string>
    <string name="insert_your_event_description">Insert Your Event Description</string>
    <string name="your_event_description_comes_down_here">YOUR EVENT DESCRIPTION COMES DOWN HERE.</string>
    <string name="date">DATE:</string>
    <string name="_28_09_1997">28/09/1997</string>
    <string name="displays_the_image_of_the_department_event">Displays the Image of the Department Event</string>
    <string name="share_button">Share Button</string>
    <string name="computer_sceince_and_engineering">Computer Sceince And Engineering</string>
    <string name="automibile_engineering">AUTOMOBILE ENGINEERING</string>
    <string name="civil_engineering">CIVIL ENGINEERING</string>
    <string name="electrical_and_electronics_engineering">ELECTRICAL AND ELECTRONICS ENGINEERING</string>
    <string name="electrical_and_instrumentation_engineering">ELECTRICAL AND INSTRUMENTATION ENGINEERING</string>
    <string name="information_and_technology">INFORMATION AND TECHNOLOGY</string>
    <string name="mechanical_engineering">MECHANICAL ENGINEERING</string>
    <string name="electronics_and_communications_engineering">ELECTRONICS AND COMMUNICATIONS ENGINEERING</string>
    <string name="mark_the_date">MARK THE DATE?</string>
    <string name="please_enter_the_password">ENTER THE PASSWORD!</string>
    <string name="department">DEPARTMENT</string>
    <string name="department_events">Department Events</string>
    <string name="vulcan_events">The Vulcan Events</string>
    <string name="sports_events">Aadukalam</string>
    <string name="vulcan_team">Vulcan Team</string>
    <string name="vulcans">Vulcans</string>
    <string name="national_level_symposiums">National Level Symposiums</string>
    <string name="aadukalam">Aadukalam</string>
    <string name="vulcans_team_logo">Vulcans team logo</string>
    <string name="the_vulcans_team">The Vulcans Team</string>
    <string name="swagat">SWAGAT</string>
    <string name="swagat_even_description_comes_down_here">SWAGAT EVEN DESCRIPTION COMES DOWN HERE</string>
    <string name="events_in_our_college">EVENTS IN OUR COLLEGE</string>
    <string name="visit">Visit…</string>
    <string name="the_vulcans">The Vulcans</string>
    <string name="sport_even_description_comes_down_here">Sports event description comes down here.</string>
    <string name="add_event">Add Event!</string>
    <string name="your_event_name">Your Event Name</string>
    <string name="your_event_date">Your Event Date</string>
    <string name="aadukalam_events">Aadukalam Events</string>
    <string name="come_back">If the events do not appear, please leave the section and come back</string>
    <string name="president">President</string>
    <string name="president_name">President Name</string>
    <string name="enter_your_invitation_text">Enter your Invitation text</string>
    <string name="mandatory_fields">* Please make sure you have filled all the fields</string>
    <string name="add_image">Add Image</string>
    <string name="vulc_description">The Vulcans Description</string>
    <string name="swagat_desc">The Swagat Description</string>
    <string name="talentia_desc">The Talentia Description</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_department">Enter Department</string>
    <string name="vulcans_administrator">Vulcans Administrator</string>
    <string name="add_member">Include Vulcan</string>
    <string name="vulcans_team">Vulcans Team</string>
    <string name="add_all_vulcans">Add All Vulcans</string>
    <string name="master_of_business_administration">Master of Business Administration</string>
    <string name="master_of_computer_application">Master of Computer Application</string>
    <string name="the_total_no_of_people_attending">The total no of people attending</string>
    <string name="upcoming_event">NEXT EVENT</string>
    <string name="description_not_mandatory">Description</string>
    <string name="update">UPDATE</string>
    <string name="n_a">N/A</string>

</resources>
