<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminUpcomingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/administrator_column"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_adup_admincol"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_event"
        android:textSize="25sp"
        android:layout_below="@id/tv_adup_admincol"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_adup_up"
        android:layout_marginBottom="20dp"/>

    <View
        android:layout_width="350dp"
        android:layout_height="4dp"
        android:layout_centerHorizontal="true"
        android:background="#000"
        android:id="@+id/view_ad_up"
        android:layout_below="@id/tv_adup_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/department_name"
        android:layout_below="@id/view_ad_up"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:id="@+id/tv_deptnam"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_deptnam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_the_name_of_the_event"
        android:id="@+id/et_evnam_adup"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_evnam_adup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/select_the_event_date"
        android:id="@+id/et_evdat_adup"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_evdat_adup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/et_evdesc_adup"
        android:hint="@string/description_not_mandatory"
        android:inputType="textLongMessage"
        android:maxLength="500"/>

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_evdesc_adup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_sub_adup"
        android:text="@string/update"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sub_adup"
        android:text="*Make sure the next event is updated, once the current event is over."
        android:gravity="center"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>