<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relLay"
    tools:context="com.example.mahe.eecevents3106.AdminVulcanActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vulcans_administrator"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:id="@+id/tvVULADMIN"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/editNameVulcan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_name"
        android:inputType="textCapWords"
        android:layout_below="@id/tvVULADMIN"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:id="@+id/editDeptVulcan"
        android:layout_below="@id/editNameVulcan"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp">

    </Spinner>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="40sp"
        android:layout_below="@id/editDeptVulcan"
        android:id="@+id/spinYearSelec"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinYearSelec"
        android:layout_margin="10sp"
        android:text="@string/add_member"
        android:id="@+id/vulMemBTN"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vulMemBTN"
        android:text="@string/add_all_vulcans"
        android:layout_margin="10sp"
        android:id="@+id/vulAddMemBTN"/>


</RelativeLayout>
